# electronic-diagnoise

./: .gitignore  README.md  pyproject.toml
configs/: cognitive_radio_band_hybrid.yaml  cognitive_radio_band_transfer_from_presence.yaml  cognitive_radio_burst_duration.yaml  cognitive_radio_drift_cnn.yaml  cognitive_radio_drift_cnn_lstm.yaml  cognitive_radio_drift_physics.yaml  cognitive_radio_drift_qwen_local.yaml  cognitive_radio_drift_type.yaml  cognitive_radio_frequency_band.yaml  cognitive_radio_hybrid_benchmark.yaml  cognitive_radio_multitask.yaml  cognitive_radio_multitask_hybrid.yaml  cognitive_radio_paper_benchmark.yaml  cognitive_radio_paper_benchmark_extended.yaml  cognitive_radio_presence_cnn.yaml  cognitive_radio_presence_cnn_cv.yaml  cognitive_radio_presence_cnn_lstm.yaml  cognitive_radio_presence_deepseek7b_qlora.yaml  cognitive_radio_presence_fair_baseline.yaml  cognitive_radio_presence_fair_cnn.yaml  cognitive_radio_presence_fair_qwen.yaml  cognitive_radio_presence_hybrid.yaml  cognitive_radio_presence_model_benchmark.yaml  cognitive_radio_presence_physics_fix.yaml  cognitive_radio_presence_physics_topk_20.yaml  cognitive_radio_presence_physics_topk_full.yaml  cognitive_radio_presence_qwen7b_qlora.yaml  cognitive_radio_presence_qwen_local.yaml  cognitive_radio_presence_qwen_qlora.yaml  cognitive_radio_presence_qwen_vs_cnn.yaml  cognitive_radio_presence_scalar_hybrid.yaml  cognitive_radio_presence_signal_strength_ablation.yaml  cognitive_radio_presence_ssl_transfer.yaml  cognitive_radio_presence_svc.yaml  cognitive_radio_presence_transformer_1d.yaml  (+24 more)
(+77 files in other folders)
