[project]
name = "emc-diagnosis-ai"
version = "0.1.0"
description = "AI-driven EMC and EMI fault diagnosis research pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib>=3.9,<3.11",
  "numpy>=2.1,<3.0",
  "pandas>=2.2,<3.0",
  "pyarrow>=19.0,<21.0",
  "pyyaml>=6.0,<7.0",
  "scikit-learn>=1.6,<1.8",
  "scipy>=1.15,<2.0",
  "seaborn>=0.13,<0.14",
  "torch>=2.8,<3.0",
  "tqdm>=4.67,<5.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
]
llm = [
  "accelerate>=1.4,<2.0",
  "bitsandbytes>=0.45,<1.0",
  "peft>=0.14,<1.0",
  "transformers>=4.49,<5.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emc_diag"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
